# mvc

./: .gitignore  README.md
example/: CMakeLists.txt  main.cpp
example/Ctrls/: Fwd.h  PageLoader.h
example/Models/: Fwd.h  Page.h
example/Views/: ContentView.h  ProgressView.h
include/mvc/: controller.h  view.h
include/mvc/details/: observer.h
tests/: CMakeLists.txt  tests.cpp
